# Indie-Studio

./: CMakeLists.txt  README.md
Install/: compile.sh  install.sh
Save/: settings.xml
src/include/: Camera.hpp  CoreAVC.hpp  Enemy.hpp  ICharacter.hpp  ICharacter_save.hpp  Keyboard.hpp  Light.hpp  Map.hpp  MapAVC.hpp  Menu.hpp  MenuAVC.hpp  Play.hpp  Player.hpp  PlayerAVC.hpp  Player_save.hpp
src/media/Angel/: Information_animation  angel.b3d
src/media/Astek/: ASTEK_FINAL.b3d
src/media/Décor/CacklingSkull/: CacklingSkull.mtl  CacklingSkullANIM.fbx
src/media/Décor/Tikis/BetaThunderTiki/: tiki_thunder_bind.mtl
src/media/Koala/: koala.b3d
src/media/Map/: Map.blend1.blend  Map.blend1.blend1  map.mtl
src/media/Map/Room1/: Map.blend1  map.mtl
src/media/Warrior/: WARIOR_FINAL.b3d
src/src/: #main2.cpp#  Attack.cpp  Camera.cpp  Core.cpp  Deco.cpp  Enemy.cpp  Keyboard.cpp  Light.cpp  Map.cpp  Map2.cpp  Map_save.cpp  Play.cpp  Player.cpp  main2.cpp
texture/Play/: pos.txt
